# roboscope-ui

./: .gitignore  LICENSE  README.md  app.py  example.db  main.py  pyproject.toml
components/: filters.py  plots.py  tables.py
dashboards/: test_run_dashboard.py
data/: db.py
measurements/: boolean_measurements.py  numeric_measurements.py  series_measurements.py  string_measurements.py
