[project]
name = "roboscope-ui"
version = "0.1.0"
description = "Streamlit dashboard for RoboScope. Visualize and explore Robot Framework test results and measurements from your SQLite/PostgreSQL database."
authors = [{ name = "Mykyta Didenko", email = "geomags3849@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "roboscope",
    "streamlit>=1.44.1",
]

[tool.uv.sources]
roboscope = { git = "https://github.com/geomags3/roboscope.git" }

[project.urls]
Homepage = "https://github.com/geomags3/roboscope-ui"
Repository = "https://github.com/geomags3/roboscope-ui"
Issues = "https://github.com/geomags3/roboscope-ui/issues"
